--- a/src/maasserver/static/scss/maas/components/_lists.scss
+++ b/src/maasserver/static/scss/maas/components/_lists.scss
@@ -24,6 +24,7 @@ dl {
       float: left;
       line-height: 37px;
       margin-bottom: 10px !important;
+      word-wrap: break-word;
   }
 }
 
